# stm32f4_cpp_example

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: board-target.yml  test-target.yml
cmake/: arm-none-eabi-gcc.cmake
docker/: Dockerfile
src/nucleo-f446ze-library/: .cproject  .project
src/nucleo-f446ze-library/Libraries/: CMakeLists.txt
src/nucleo-f446ze-library/Libraries/DeviceDrivers/: CMakeLists.txt
src/nucleo-f446ze-library/Libraries/DeviceDrivers/Include/: gpio.h
src/nucleo-f446ze-library/Libraries/DeviceDrivers/Src/: gpio.cpp
src/nucleo-f446ze-library/Src/: nucleo-f446ze-library.c
src/stm32-cube-ide/: .cproject  .mxproject  .project  stm32-cube-ide.ioc
src/stm32-cube-ide/BSP/Include/: bsp.h  bsp_gpio.h
src/stm32-cube-ide/BSP/Src/: bsp.c  bsp_gpio.cpp
src/stm32-cube-ide/Core/Inc/: main.h  stm32f4xx_hal_conf.h
src/stm32-cube-ide/Core/Src/: main.cpp  stm32f4xx_hal_msp.c
src/stm32-cube-ide/Inc/: board.h
src/stm32f4-cpp-project-app/: .cproject  .project
src/stm32f4-cpp-project-app/Application/Src/: app_main.cpp
src/stm32f4-cpp-project-app/Inc/: app_main.h
tests/: CMakeLists.txt
tests/unit/device-drivers/: gpio_test.cpp
